complete the remaing html and css

--- a/sidebar/sidebar_index.html
+++ b/sidebar/sidebar_index.html
@@ -9,21 +9,41 @@
 </head>
 <body>
     <div class="main_box">
+            <input type="checkbox" id="check">
+            <div class="btn_one">
+                <label for="check">
+                    <i class="fa-solid fa-bars"></i>
+                </label>
+            </div>
         <div class="Side_box">
             <div class="logo">
                 <a href="#">Cosmos</a>
             </div>
-            <ul>
-                <li><a href="#"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
-            <li><a href="#"><i class="fa-solid fa-link"></i>Shortcout</a></li>
-            <li><a href="#"><i class="fa-solid fa-bars-staggered"></i>Overview</a></li>
-            <li><a href="#"><i class="fa-solid fa-calendar-day"></i>Events</a></li>
-            <li><a href="#"><i class="fa-solid fa-circle-question"></i>About</a></li>
-            <li><a href="#"><i class="fa-solid fa-bell-concierge"></i>Services</a></li>
-            <li><a href="#"><i class="fa-regular fa-phone-volume"></i>contact</a></li>
-            <li><a href="#"><i class="fa-solid fa-comment-dots"></i>Feedback</a></li>
-            </ul>
+            <div class="btn_two">
+                <label for="check">
+                    <i class="fa-solid fa-x"></i>
+                </label>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#"><i class="fa-solid fa-chart-line"></i>Dashboard</a></li>
+                    <li><a href="#"><i class="fa-solid fa-link"></i>Shortcout</a></li>
+                    <li><a href="#"><i class="fa-solid fa-bars-staggered"></i>Overview</a></li>
+                    <li><a href="#"><i class="fa-solid fa-calendar-day"></i>Events</a></li>
+                    <li><a href="#"><i class="fa-solid fa-circle-question"></i>About</a></li>
+                    <li><a href="#"><i class="fa-solid fa-bell-concierge"></i>Services</a></li>
+                    <li><a href="#"><i class="fa-solid fa-phone"></i>Contact</a></li>
+                    <li><a href="#"><i class="fa-solid fa-comment-dots"></i>Feedback</a></li>
+                </ul>
+            </div>
+        
+        <div class="social_media">
+           <a href="#"><i class="fa-brands fa-facebook"></i></a> 
+           <a href="#"><i class="fa-brands fa-discord"></i></a>
+           <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+           <a href="#"><i class="fa-brands fa-square-github"></i></a>
         </div>
     </div>
-</body>
+    </div>
+</body>  
 </html>
